Changes with Apache 1.3.15

  *) Fix the RFC number mentioned when complaining about a missing
     Host: header. PR#7079 [Alexey Toptygin <alexeyt@wam.umd.edu>]

  *) Fix Range header processing to properly parse the syntax specified
     in RFC 2616, and properly handle unsatisfiable requests by returning
     a 416 error. PR#6973 [Tony Finch, William Rowe]

  *) Remove some human-readable fluff from the machine-readable mod_status
     display. PR#7025 [Youichirou Koga <y-koga@apache.or.jp>]

  *) The new Win32 command line option, -k config, replaces the default
     options for the existing, named service with the options given on 
     the -k config command line.  Apache -n servicename -t now displays
     the default options before it tests the httpd.conf.  Use the syntax
     apache -k config -n servicename -f conffile to upgrade an existing
     1.3.x service to the new 1.3.15 default arguments.  [William Rowe]

  *) All Win32 services now support default command line options when
     starting an Apache service.  The command line options given with
     the apache -k install command, including -d, -f, -D, -C and -c, 
     are all saved in the registry.  This change superceeds the old
     ConfPath entry, so existing services must be reconfigured when
     upgrading to 1.3.15.  [William Rowe]

  *) The Win32 build is overhauled to use mod_foo.so for all dynamic
     Apache modules.  [William Rowe]

  *) The Win32 build scripts (makefile.win, Apache.dsw) now build
     all the usual targets, including the directories htdocs, include,
     lib, libexec, and cgi-bin.  [William Rowe]

  *) WinNT/2K service can be started from the command line with any
     desired args (e.g. Apache -k start -n apache-1.3 -D FOO will
     start the service with the -D FOO option.)  This extends what
     Apache on Win9x already does, even running as a service.
     [William Rowe]

  *) WinNT/2K can be started from the Services control panel adding